@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-21T08:20:03Z",
-  "count_outdated" : 246,
-  "uniques_outdated" : 126,
+  "timestamp" : "2022-04-22T01:15:36Z",
+  "count_outdated" : 247,
+  "uniques_outdated" : 127,
   "count" : 259,
   "uniques" : 137,
   "clones" : [
-    {
-      "timestamp": "2022-04-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
