@@ -1,12 +1,7 @@
 {
-  "count": 13,
+  "count": 12,
   "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-04-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-09T00:00:00Z",
       "count": 1,
